--- a/lesson5/ylab-lesson4-template/pom.xml
+++ b/lesson5/ylab-lesson4-template/pom.xml
@@ -24,7 +24,39 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.24</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java/io/ylab/intensive/lesson05/messagefilter/resources</directory>
+                <includes>
+                    <include>*.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/java/io/ylab/intensive/lesson05/messagefilter/resources</directory>
+                <includes>
+                    <include>*.txt</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
